# terminusdb

./: .dockerignore  .env-template  .env.example  .gitignore  .gitmodules  .lint_config.pl  .travis.yml  API.md  BUILD.md  CLI.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  FAQ.md  GETTING_STARTED.md  LICENSE  Makefile  PREPARE_PR.md  README.md  RELEASE_NOTES.md  SECURITY.md  SYNTAX.md  Start_with_JS.md  VERSION  api.pl  appveyor.yml  bootstrap.pl  config-example.pl  docker-compose.yml  file_utils.pl  index.html  index.tpl  init.pl  init_docker.sh  journaling.pl  load_paths.pl  localhost.crt  make.sh  navigation.md  progress_commit_queue_debug.md  (+9 more)
.ci/: trigger_appimage.sh  trigger_canary.sh
.github/: bors.toml  install-swi-prolog.sh  pull_request_template.md  remove-old-docker-images.py
Explanation/: CLOSED.md  DELTA.md  IMMUTABLE.md  LOWCODE.md  MODELHOW.md  PROVENANCE.md  RESEARCH.md  VOCABULARY.md  WRITECLIENT.md  unification.md
How_To/: Install.md  add_a_date.md  add_remote.md  angular_app.md  application.md  branch_deduplication.md  certificate_python.md  delete.md  get_started.md  import_schema.md  jsonld_query.md  math_query.md  merge_conflict.md  other.md  pack_operation.md  prov_ontology.md  query.md  revert.md  save_query.md  schema.md  select_commit.md  start_container.md  visualize_schema.md
Install/: JS_INSTALL.md
Intro_Tutorials/: Getting_Started.md  START_SCHEMA.md  Start_With_CLI.md  Start_With_Console.md  Start_With_Python.md  Start_with_JS.md
benchmark/: data.js  index.html
canary/: CONTRIBUTING.md  CURL.md  README.md  RELEASE_NOTES.md
cli/: main.pl
config/: capability_inference_template.ttl  capability_instance_template.ttl  capability_schema_template.ttl  config-example.pl  config-template.tpl  index.tpl  terminus_config.pl  terminus_inference_template.ttl  terminus_instance_template.ttl
core/: account.pl  api.pl  bootstrap.pl  query.pl  transaction.pl  triple.pl  util.pl  validation.pl
dashboard/: package-lock.json  package.json
desktop/: README.md  package.json
dev/: DEBIAN.md  README.md  navigation.md  terminusdb.1  terminusdb.1.ronn.template
distribution/: Dockerfile.utility  Makefile.deps  Makefile.prolog  Makefile.rust  init_docker.sh  init_snap.sh
doc_ci-fix/: EXPLANATION.md  README.md  index.html  terminusdb.1
docs/: ARBITRARY_PRECISION_DECIMALS_ARCHITECTURE.md  BUILD.md  CLI.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  CURL.md  DEBIAN.md  DEV.md  DOCKER.md  DOCUMENT.md  ERROR_HANDLING_STANDARDS.md  EXPLANATION.md  FAQ.md  JSON_SERIALIZATION_RULES.md  NUMERIC_CANONICALIZATION_QUICK_REFERENCE.md  README.md  REFERENCE.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  SYNTAX.md  TUTORIALS.md  XSD_DECIMAL_SPECIFICATION.md  index.html  navigation.md  openapi.yaml  release-steps.md  release.md  terminusdb.1  terminusdb.1.ronn  terminusdb.1.ronn.template  todo.pl
examples/: EXAMPLES.md
lego_benchmark_results/: lego_terminusdb_08361f84ecca2b739d79c5bd05c119059ad952da.json  lego_terminusdb_0b2a95d1a518c8037f8339ab91883f8bd31e087c.json  lego_terminusdb_16775e1749c6420faf01dc64d27c874f76039e16.json  lego_terminusdb_1a48cca3550107c8b1bd01c7a438df6fd7821966.json  lego_terminusdb_1b125b2254147a4ecf50c99ace82c39e5ed0b227.json  lego_terminusdb_1c47785580a89e147c68cd5558496774004d729e.json  lego_terminusdb_22aa86b47d75a57b7b2eeebe618b663d00fdf514.json  lego_terminusdb_29a2d27e474a351c793317780a58a1493af7ce4b.json  lego_terminusdb_2c48ad4233e47fa60083487dddbbd175320a447b.json  lego_terminusdb_2d2ad32ecf726cbb173fb4a761ced091efb2dacd.json  lego_terminusdb_35baeba5032c4c0f9051af66de127cd0e8f4c673.json  lego_terminusdb_366c6895c42fc21deb020daaf2df765ff5616805.json  lego_terminusdb_3a7fef0002e17f64150197eaa6dbe961a34d25e0.json  lego_terminusdb_3ca126599dc3bc7d71f5205bb100d997775728fd.json  lego_terminusdb_46dd455278e035748d7536dd7a4c3875516be442.json  lego_terminusdb_577404eff9c62c6e89c71e1d92b20eda47af7217.json  lego_terminusdb_5804434dcbbdd0410f6a555f5b7b3fc1d3513d62.json  lego_terminusdb_5903baba0c1ba6ac87f4f8420b9d94e7dc3067eb.json  lego_terminusdb_5918f7130d75edb7b11cfee348d166fe76ba7ad8.json  lego_terminusdb_5ddd14d78fc2d3525f5dce7bcbf5d1d420c0e1be.json  lego_terminusdb_5f8e86074b3e64f4a08627f32570666d46c4e4c5.json  lego_terminusdb_68fc09c3fc8eb774990ccacd2b622e8a3a90ed10.json  lego_terminusdb_6ae4ba0ef44e0f0d7b57349c89484e9be982d653.json  lego_terminusdb_6deb6ce22bc19af0502841f64ae6de422bb0f15b.json  lego_terminusdb_71e87ca4b6ace1e09c2c1721ef52eb01f1499bef.json  lego_terminusdb_73b364de88f95f710460590cfb40361fc5d4cf63.json  lego_terminusdb_74784f4260813cce3ce66ada7828709378491ffd.json  lego_terminusdb_788abdb14da17fe948b22b91db6a7c6887bdcc35.json  lego_terminusdb_7cbd85472292bedb317d965e855e7ffa0a114f9e.json  lego_terminusdb_7ec36f9572d31df56b1ccf67db6f1c3910f2f3ad.json  lego_terminusdb_7f019a419df8160632a42bdd4fa391866197f8ce.json  lego_terminusdb_803facaacaf24ef0fa0ce8c3b0b10831ad45c4b7.json  lego_terminusdb_816db3c3b61bcb962a43ca934d7f42b2f24d1904.json  lego_terminusdb_8895f8ae68e523cf83fa216a00313e065b2513a7.json  lego_terminusdb_89993034c6d6293cd938da94d6c22092edf2c213.json  (+34 more)
src/rust/: Cargo.toml
src/rust/src/: exclusion.rs  lib.rs  matrix.rs
src/rust/terminusdb-community/: Cargo.toml
src/rust/terminusdb-community/src/: bson.rs  change_window.rs  changes.rs  consts.rs  dict_lookup.rs  doc.rs  embedding.rs  gc_sync.rs  index.rs  json.rs  json_preserve.rs  lib.rs  log.rs  path.rs  prefix.rs  schema.rs  template.rs  types.rs  value.rs
src/rust/terminusdb-community/src/doc/: delete.rs  elaboration.rs  mod.rs  prefix.rs  verify.rs
src/rust/terminusdb-community/src/graphql/: filter.rs  frame.rs  main_graph.rs  mod.rs  mutation.rs  naming.rs  query.rs  sanitize.rs  schema.rs  system.rs  top.rs
src/rust/terminusdb-community/src/path/: compile.rs  iterator.rs  mod.rs  parse.rs
src/rust/terminusdb-dylib/: Cargo.toml
src/rust/terminusdb-dylib/src/: lib.rs
src/rust/terminusdb-store-prolog/: Cargo.toml
src/rust/terminusdb-store-prolog/src/: builder.rs  cache.rs  csv.rs  layer.rs  lib.rs  named_graph.rs  store.rs  value.rs
(+682 files in other folders)
