[workspace]
members = ["terminusdb-community", "terminusdb-store-prolog", "terminusdb-dylib"]
resolver = "1"

[profile.release]
debug = true

[patch.crates-io]
#terminus-store = {path="../../../terminusdb-store"}
#terminus-store = {git="https://github.com/terminusdb/terminusdb-store"}
swipl = {git="https://github.com/terminusdb-labs/swipl-rs", branch="decode_latin1"}
#swipl = {path="../../../swipl-rs/swipl"}