[workspace]
members = ["terminusdb-community", "terminusdb-store-prolog", "terminusdb-dylib"]
resolver = "1"

[profile.release]
debug = true

[patch.crates-io]
#tdb-succinct = {path="../../../tdb-succinct"}
#terminus-store = {path="../../../terminusdb-store"}
#terminus-store = {git="https://github.com/terminusdb/terminusdb-store"}
#swipl = {path="../../../swipl-rs/swipl"}