[workspace]
members = ["terminusdb-community", "terminusdb-store-prolog", "terminusdb-dylib"]
resolver = "1"

[profile.release]
debug = true

[patch.crates-io]
#tdb-succinct = {path="../../../tdb-succinct"}
tdb-succinct = {git="https://github.com/terminusdb-org/tdb-succinct", branch="iso8601-predicates"}
#terminus-store = {path="../../../terminusdb-store"}
terminus-store = {git="https://github.com/terminusdb-org/terminusdb-store"}
swipl = {git="https://github.com/terminusdb-org/swipl-rs"}
#swipl = {path="../../../swipl-rs/swipl"}

#[patch."https://github.com/terminusdb-org/terminusdb-store"]
#terminus-store = {path="../../../terminusdb-store"}
