[package]
name = "terminusdb-community"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcs = "0.2.0"
swipl = {version="0.3.12", features=["serde"]}
terminusdb-store-prolog = {path="../terminusdb-store-prolog"}
itertools = "0.10.3"
serde_json = {version="1", features=["preserve_order", "arbitrary_precision"]}
lazy_static = "1.4"
urlencoding = "2.1"
rayon = "1.5"
lazy-init = "0.5"
rand = "0.8.5"
juniper = {version="0.15", features = ["expose-test-schema"]}
serde = {version="1.0", features=["derive"]}
float-ord = "0.3"
regex = "1"
aho-corasick = "0.7"
bimap = "0.6.2"
ordered-float = "3.0"
rug = {version = "1.17", default-features = false, features=["integer","rational"]}
gmp-mpfr-sys = {version = "1.4", default-features = false, features=["use-system-libs"]}
