[package]
name = "terminusdb-dylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
terminusdb-community = {path="../terminusdb-community"}
terminusdb-store-prolog = {path="../terminusdb-store-prolog"}